Changed Plugin properties

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=ToA Invocation Levels
+author=TheMidge
+description=Shows each invocation's raid-level increase directly in the party's Invocations panel.
+tags=toa,tombs,invocation,raid,levels
+plugins=com.toa.ToaInvocationLevelsPlugin
