Just screw single quotes altogether tbh

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
 displayName=ToA Invocation Levels
 author=TheMidge
-description=Shows each invocation's raid-level increase directly in the party's Invocations panel.
+description=Shows each invocation raid-level increase directly in the party Invocations panel.
 tags=toa,tombs,invocation,raid,levels
 plugins=com.toa.ToaInvocationLevelsPlugin
